<resources>
    <string name="app_name">KYK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kyk_home_name">Instagram</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="manu_title_one">App</string>
    <string name="menu_support">Support</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="about_us">About us</string>
    <string name="have_an_account">have an account</string>
    <string name="create_account">Create Account</string>
    <string name="password_try">Confirm Password</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="ema_l">Emaıl</string>
    <string name="password">Password...</string>
    <string name="mustbe_empy_email">Field must be not empty</string>
    <string name="mail_valid">e mail is wrong</string>
    <string name="password_wrong">\"The password can be at least 6 digits \"</string>
    <string name="email_is_empty">Email address cannot be empty</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_register">Register</string>
    <string name="forgot_passwod">Forgot passwod?</string>
    <string name="login_activity_sucess">Success</string>
    <string name="send_email">Send</string>
    <string name="sending_email_forgot_pasword">Sending</string>
    <string name="register_activity_match_pass">passwords must match</string>
    <string name="password_cannot_be_emty">Password cannot be empty</string>
    <string name="username">Username</string>
    <string name="username_must_be_not_empty">Username cannot be empty</string>
    <string name="next">Next</string>
    <string name="choose_advice_username">Choose a recommended username or enter a username.</string>
    <string name="choose_username">Choose one of the recommended usernames or enter a new username.</string>
    <string name="must_be_leave">You must not leave this field blank</string>
    <string name="err">Error</string>
    <string name="email_available">We already have it in our e-mail records. If you have forgotten your password, go to the forgot password section.</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="chooser">Chooser</string>
    <string name="permision">Camera or Galery permission denied</string>
    <string name="i_want_to_use_the_recommended_username">I want to use the recommended username</string>
    <string name="please_wait">Please Wait</string>
    <string name="wrong_username">This username is already in use. Enter another username or choose one of the recommended usernames.</string>
    <string name="exsist_username">Username is already in use. Try another username or use recommended usernames.</string>
    <string name="unknown">An unknown error has occurred. Please try again.</string>
    <string name="crop_title">Crop Image</string>
    <string name="crop_">Crop</string>
    <string name="permissin_deniad">Camera Permission access</string>
    <string name="galery_perm">Gallery permission denied</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="accept">Accept</string>
    <string name="selected_0_item">Selected 0 Item</string>
    <string name="cancel">Cancel</string>
    <string name="search_hint">Search something</string>
    <string name="problem_found">Problem found</string>
    <string name="connection">Connection</string>
    <string name="an_error">An error occurred</string>
    <string name="checkInternet">Please check internet connection</string>
    <string name="success">Success</string>
    <string name="warnconnection">No internet connection! Changes will be processed when you are online</string>
    <string name="comment">Comment...</string>
    <string name="try_to_write_something">Try to write something</string>
</resources>