<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_starter">

    <EditText
        android:id="@+id/login_mail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="268dp"
        android:background="@drawable/bacground_edittext"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/ema_l"

        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#C6B4B4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bacground_edittext"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="5dp"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:minLines="6"
        android:textColor="@color/white"
        android:textColorHint="#C6B4B4"
        app:layout_constraintEnd_toEndOf="@+id/login_mail"
        app:layout_constraintStart_toStartOf="@+id/login_mail"
        app:layout_constraintTop_toBottomOf="@+id/login_mail" />

    <Button
    android:id="@+id/login_button"
    android:layout_width="293dp"
    android:layout_height="40dp"
    android:layout_marginTop="50dp"

    android:background="@drawable/layout_backgorund"
    android:text="@string/login"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="@+id/login_password"
    app:layout_constraintStart_toStartOf="@+id/login_password"
    app:layout_constraintTop_toBottomOf="@+id/login_password" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="293dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"

        android:background="@drawable/layout_backgorund"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />
</androidx.constraintlayout.widget.ConstraintLayout>