<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background_starter">


    <EditText
        android:id="@+id/register_password_try"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bacground_edittext"
        android:hint="@string/password_try"
        android:inputType="textPassword"
        android:textColorHint="#C6B4B4"
        app:layout_constraintEnd_toEndOf="@+id/regıster_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/regıster_password"
        app:layout_constraintTop_toBottomOf="@+id/regıster_password"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="5dp"
        android:textColor="@color/white"
        android:minLines="6"
        />

    <EditText
        android:id="@+id/register_name_and_surname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/bacground_edittext"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint="@string/name_and_surname"
        android:inputType="text"
        android:textColorHint="#C6B4B4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/register_mail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bacground_edittext"
        android:hint="@string/ema_l"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:textColorHint="#C6B4B4"
        app:layout_constraintEnd_toEndOf="@+id/register_name_and_surname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_name_and_surname"
        app:layout_constraintTop_toBottomOf="@+id/register_name_and_surname"
        android:drawablePadding="5dp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/regıster_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bacground_edittext"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#C6B4B4"
        app:layout_constraintEnd_toEndOf="@+id/register_mail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_mail"
        app:layout_constraintTop_toBottomOf="@+id/register_mail"
        android:drawablePadding="5dp"
        android:textColor="@color/white"
        android:minLines="6"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="293dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="@+id/register_password_try"
        app:layout_constraintStart_toStartOf="@+id/register_password_try"
        app:layout_constraintTop_toBottomOf="@+id/register_password_try"
        android:background="@drawable/layout_backgorund"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>